--- a/res/scss/_colors.scss
+++ b/res/scss/_colors.scss
@@ -1,9 +1,30 @@
-/* COLORS */
+$pink-1: #ed1495;
+$pink-2: #e60089;
+$pink-3: #da0684;
 
-// colors
-$pink: #fff;
+$super-dark-gray: #333333;
+$dark-gray: #757575;
+$darker-gray: #585858;
+$darkish-gray: #535353;
+$medium-gray: #9b9b9b;
+$light-gray: #bbbbbb;
+$lighter-gray: #cccccc;
 
-// theme colors
-$primary: $pink;
-$secondary: $pink;
-$complementary: $pink;
+/* THEME COLORS */
+$primary: $pink-1;
+$secondary: $super-dark-gray;
+$complementary: $pink-1;
+
+// header
+$nav-btn: $darkish-gray;
+$login-btn: $light-gray;
+
+// intro
+$slide-text: $super-dark-gray;
+
+// courses
+$course-title: $darker-gray;
+$course-subtitle: $medium-gray;
+$course-content: $darker-gray;
+$price-bg: $pink-2;
+$price-enroll: $pink-3;
