--- a/res/scss/style.scss
+++ b/res/scss/style.scss
@@ -1,5 +1,4 @@
 // imports
-@import '../../ext_res/bootstrap/css/bootstrap';
 @import 'colors';
 @import 'fonts';
 @import 'metrics';
@@ -9,7 +8,221 @@
 @charset 'utf-8';
 
 // sass
-.mobileLogo {
-  @extend .navbar-toggler;
+body {
+  font-family: $body;
+  margin: 0;
+}
+
+a {
+  @include crossTransition(all 0.3s);
+}
+
+.nav-header {
+  height: 780px;
+  width: 100%;
+  text-align: center;
+  background-image: url('../../client_res/img/bg/header.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+%toggleable {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  display: none;
+  @media screen and (max-width: $md) {
+    display: block;
+  }
+}
+
+%untoggleable {
+  display: block;
+  @media screen and (max-width: $md) {
+    display: none;
+  }
+}
+
+.mobile-logo {
+  @extend %toggleable;
+  left: 20px;
+}
+
+.navbar-toggler {
+  @extend %toggleable;
+  right: 13px;
+  width: 60px;
+  height: 50px;
   border: none;
+  background: transparent;
+  color: $nav-btn;
+  font-size: 28px;
+}
+
+.navbar {
+  margin: 0;
+  background: transparent;
+  position: relative;
+  height: 64px;
+  border-bottom: 1px solid #e8e8e8;
+}
+
+.nav-collapseable {
+  display: inline-block;
+  height: 100%;
+  @media screen and (max-width: $md) {
+    &.show {
+      display: block;
+      padding-top: 64px;
+      & .nav-item {
+        display: block;
+        clear: both;
+        width: 100%;
+        border-bottom: 1px solid #e8e8e8;
+        margin: 0;
+        padding: 20px;
+        background-color: #e8e8e8;
+        font-size: 12px;
+        text-transform: uppercase;
+        text-align: left;
+        &:hover,
+        &:focus,
+        &:active {
+          background-color: #cccccc;
+        }
+      }
+    }
+  }
+}
+
+%collapseable {
+  display: block;
+  @media screen and (max-width: $md) {
+    display: none;
+  }
+}
+
+.nav-item {
+  @extend %untoggleable;
+  float: left;
+  padding: 8px 36px 8px;
+  @include marginY(31px, 8px);
+  text-decoration: none;
+  font-size: 12px;
+  font-weight: 600;
+  line-height: 1;
+  color: $nav-btn;
+  & .dropDownArrow {
+    margin-left: 7px;
+    vertical-align: middle;
+    @include crossFilter(grayscale(100%));
+  }
+  &.active,
+  &:hover,
+  &:focus,
+  &:active {
+    color: $primary;
+    & > .dropDownArrow {
+      @include crossFilter(grayscale(0));
+    }
+  }
+  @media screen and (max-width: $lg) {
+    @include paddingX(2vw);
+  }
+}
+
+.desk-logo {
+  @extend %untoggleable;
+  float: left;
+  @include marginX(-36px, -45px);
+  @include paddingX(43px);
+  padding-top: 11px;
+  background: #fff;
+}
+
+.secondary-nav {
+  max-width: 1060px;
+  margin: 13px auto;
+  @include paddingX(30px);
+  display: flex;
+  flex-direction: row;
+}
+
+.login-container {
+  text-align: left;
+  flex: 1;
+}
+
+.social-container {
+  text-align: right;
+  flex: 1;
+  & img {
+    margin: 9px 0 9px 12px;
+  }
+}
+
+.btn {
+  display: inline-block;
+  padding: 3px 10px;
+  font-size: 12px;
+  font-weight: 600;
+  line-height: 1;
+  text-decoration: none;
+  @include crossBorder(3px);
+  @include crossTransition(all .3s);
+}
+
+.login-btn {
+  @extend .btn;
+  font-size: 12px;
+  padding: 5px 18px 7px;
+  border: 2px solid $login-btn;
+  color: $login-btn;
+  background: transparent;
+  &:hover,
+  &:focus,
+  &:active {
+    color: #fff;
+    background: $login-btn;
+  }
+}
+
+.slider {
+  position: relative;
+  font-family: $raleway;
+  width: 100%;
+  height: 100%;
+  padding-top: 64px;
+  text-transform: uppercase;
+  color: $slide-text;
+}
+
+.love {
+  position: absolute;
+  top: 210px;
+  right: 20.7%;
+  width: 630px;
+  @media screen and (max-width: 1400px) {
+    right: 15%;
+  }
+  @media screen and (max-width: $lg) {
+    left: 40%;
+  }
+}
+
+.slide-head {
+  margin-bottom: 10px;
+  font-size: 55.41px;
+  font-weight: 500;
+  & .highlight {
+    color: $primary;
+    font-weight: 800;
+  }
+}
+
+.slide-text {
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 1.3;
 }
