--- a/res/css/style.css
+++ b/res/css/style.css
@@ -13,14 +13,19 @@ a {
   -o-transition: all 0.3s;
   transition: all 0.3s; }
 
-.nav-header {
+.site-header {
   height: 780px;
-  width: 100%;
   text-align: center;
   background-image: url("../../client_res/img/bg/header.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center; }
+  @media screen and (max-width: 1199px) {
+    .site-header {
+      background-position: 40% 50%; } }
+  @media screen and (max-width: 991px) {
+    .site-header {
+      background-position: 30% 50%; } }
 
 .mobile-logo, .navbar-toggler {
   position: absolute;
@@ -75,7 +80,7 @@ a {
         text-transform: uppercase;
         text-align: left; }
         .nav-collapseable.show .nav-item:hover, .nav-collapseable.show .nav-item:focus, .nav-collapseable.show .nav-item:active {
-          background-color: #cccccc; } }
+          background-color: #fff; } }
 
 .nav-item {
   float: left;
@@ -127,13 +132,47 @@ a {
 
 .login-container {
   text-align: left;
-  flex: 1; }
+  flex: 1 1 20%; }
 
 .social-container {
   text-align: right;
-  flex: 1; }
-  .social-container img {
-    margin: 9px 0 9px 12px; }
+  flex: 1 1 80%;
+  margin-top: 7px; }
+  .social-container .search-box {
+    opacity: 0;
+    margin-top: -4px;
+    padding: 5px 10px;
+    height: 14px;
+    width: 0;
+    border: 2px solid #535353;
+    -webkit-border-radius: 15px;
+    -moz-border-radius: 15px;
+    -ms-border-radius: 15px;
+    -o-border-radius: 15px;
+    border-radius: 15px;
+    background: transparent;
+    font-family: "Open Sans", sans-serif;
+    font-weight: 600;
+    color: #333333; }
+    .social-container .search-box:hover, .social-container .search-box:focus, .social-container .search-box:active {
+      border-color: #ed1495; }
+  .social-container .search-icon {
+    display: inline-block;
+    margin-left: 12px;
+    vertical-align: top;
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    -ms-transition: all 0.3s;
+    -o-transition: all 0.3s;
+    transition: all 0.3s; }
+    .social-container .search-icon:hover, .social-container .search-icon:focus, .social-container .search-icon:active {
+      opacity: 0.5; }
+  .social-container .social-link {
+    display: inline-block;
+    margin-left: 12px;
+    vertical-align: top; }
+    .social-container .social-link:hover, .social-container .social-link:focus, .social-container .social-link:active {
+      opacity: 0.5; }
 
 .btn, .login-btn {
   display: inline-block;
@@ -166,35 +205,147 @@ a {
 .slider {
   position: relative;
   font-family: "Raleway", sans-serif;
-  width: 100%;
-  height: 100%;
-  padding-top: 64px;
+  height: 656px;
+  max-width: 1300px;
+  margin-left: auto;
+  margin-right: auto;
   text-transform: uppercase;
   color: #333333; }
 
 .love {
   position: absolute;
-  top: 210px;
-  right: 20.7%;
+  top: 220px;
+  right: 7%;
   width: 630px; }
-  @media screen and (max-width: 1400px) {
+  @media screen and (max-width: 991px) {
     .love {
-      right: 15%; } }
-  @media screen and (max-width: 1199px) {
+      text-align: right;
+      width: 500px; } }
+  @media screen and (max-width: 575px) {
     .love {
-      left: 40%; } }
+      text-align: right;
+      width: 350px; } }
 
 .slide-head {
   margin-bottom: 10px;
   font-size: 55.41px;
-  font-weight: 500; }
+  font-weight: 500;
+  text-shadow: 0 0 10px #fff; }
   .slide-head .highlight {
     color: #ed1495;
     font-weight: 800; }
+  @media screen and (max-width: 575px) {
+    .slide-head {
+      font-size: 42px; } }
 
 .slide-text {
   font-size: 18px;
   font-weight: 600;
+  text-shadow: 0 0 10px #fff;
   line-height: 1.3; }
+  @media screen and (max-width: 575px) {
+    .slide-text {
+      font-size: 16px; } }
+
+.slider-dot-container {
+  position: absolute;
+  bottom: -16px;
+  left: 0;
+  right: 0;
+  margin: 0 auto; }
+
+.slider-dot {
+  display: inline-block;
+  vertical-align: middle;
+  margin: auto 7px;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  border-radius: 50%;
+  border: 6px solid rgba(60, 60, 60, 0.15);
+  background: #cccccc;
+  background-clip: padding-box;
+  width: 12px;
+  height: 12px; }
+  .slider-dot:hover, .slider-dot:focus, .slider-dot:active {
+    background: #535353;
+    background-clip: padding-box; }
+  .slider-dot.active {
+    background: #ed1495;
+    background-clip: padding-box;
+    width: 20px;
+    height: 20px; }
+
+.site-footer {
+  text-align: center; }
+
+.footer-nav {
+  background: #373737;
+  border-top: 2px solid #2d2d2d; }
+
+.footer-head {
+  display: inline-block;
+  vertical-align: text-top;
+  text-align: center;
+  padding: 68px 16px; }
+  .footer-head a {
+    display: block; }
+  .footer-head .social-container {
+    margin-top: 15px; }
+    .footer-head .social-container .social-link {
+      margin-left: 3.5px;
+      margin-right: 3.5px; }
+
+.footer-col {
+  display: inline-block;
+  vertical-align: text-top;
+  text-align: left;
+  padding: 68px 16px; }
+  .footer-col h1 {
+    font-size: 12px;
+    font-weight: 600;
+    text-transform: uppercase;
+    color: #9b9b9b;
+    margin: 0; }
+  .footer-col ul {
+    padding-left: 0;
+    margin-top: 12px;
+    margin-bottom: 12px; }
+    .footer-col ul li {
+      list-style: none; }
+      .footer-col ul li ul {
+        padding-left: 12px;
+        margin-top: 0;
+        margin-bottom: 0; }
+
+.footer-link {
+  padding-top: 6px;
+  padding-bottom: 6px;
+  text-decoration: none;
+  font-size: 12px;
+  font-weight: 600;
+  line-height: 1; }
+  .footer-link:hover, .footer-link:focus, .footer-link:active {
+    color: #fff; }
+  li .footer-link {
+    color: #767575; }
+  li li .footer-link {
+    color: #696969; }
+
+.copyright {
+  border-top: 2px solid #2d2d2d;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background: #313131;
+  color: #373737;
+  font-size: 12px;
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  -ms-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  transition: all 0.3s; }
+  .copyright:hover {
+    color: #bbbbbb; }
 
 /*# sourceMappingURL=style.css.map */
