--- a/res/scss/style.scss
+++ b/res/scss/style.scss
@@ -17,14 +17,19 @@ a {
   @include crossTransition(all 0.3s);
 }
 
-.nav-header {
+.site-header {
   height: 780px;
-  width: 100%;
   text-align: center;
   background-image: url('../../client_res/img/bg/header.png');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  @media screen and (max-width: $lg) {
+    background-position: 40% 50%;
+  }
+  @media screen and (max-width: $md) {
+    background-position: 30% 50%;
+  }
 }
 
 %toggleable {
@@ -89,7 +94,7 @@ a {
         &:hover,
         &:focus,
         &:active {
-          background-color: #cccccc;
+          background-color: #fff;
         }
       }
     }
@@ -151,14 +156,54 @@ a {
 
 .login-container {
   text-align: left;
-  flex: 1;
+  flex: 1 1 20%;
 }
 
 .social-container {
   text-align: right;
-  flex: 1;
-  & img {
-    margin: 9px 0 9px 12px;
+  flex: 1 1 80%;
+  margin-top: 7px;
+  & .search-box {
+    opacity: 0;
+    margin-top: -4px;
+    padding: 5px 10px;
+    height: 14px;
+    width: 0;
+    border: 2px solid $darkish-gray;
+    @include crossBorder(15px);
+    background: transparent;
+    font-family: $open-sans;
+    font-weight: 600;
+    color: $secondary;
+    &:hover,
+    &:focus,
+    &:active {
+      border-color: $primary;
+    }
+  }
+  & .search-icon {
+    display: inline-block;
+    margin-left: 12px;
+    vertical-align: top;
+    @include crossTransition(all .3s);
+    &:hover,
+    &:focus,
+    &:active {
+      opacity: 0.5;
+    }
+    @media screen and (max-width: $lg) {
+
+    }
+  }
+  & .social-link {
+    display: inline-block;
+    margin-left: 12px;
+    vertical-align: top;
+    &:hover,
+    &:focus,
+    &:active {
+      opacity: 0.5;
+    }
   }
 }
 
@@ -191,23 +236,25 @@ a {
 .slider {
   position: relative;
   font-family: $raleway;
-  width: 100%;
-  height: 100%;
-  padding-top: 64px;
+  height: 656px;
+  max-width: $site-width;
+  @include marginX(auto);
   text-transform: uppercase;
   color: $slide-text;
 }
 
 .love {
   position: absolute;
-  top: 210px;
-  right: 20.7%;
+  top: 220px;
+  right: 7%;
   width: 630px;
-  @media screen and (max-width: 1400px) {
-    right: 15%;
+  @media screen and (max-width: $md) {
+    text-align: right;
+    width: 500px;
   }
-  @media screen and (max-width: $lg) {
-    left: 40%;
+  @media screen and (max-width: $xs) {
+    text-align: right;
+    width: 350px;
   }
 }
 
@@ -215,14 +262,135 @@ a {
   margin-bottom: 10px;
   font-size: 55.41px;
   font-weight: 500;
+  text-shadow: 0 0 10px #fff;
   & .highlight {
     color: $primary;
     font-weight: 800;
+  }
+  @media screen and (max-width: $xs) {
+    font-size: 42px;
   }
 }
 
 .slide-text {
   font-size: 18px;
   font-weight: 600;
+  text-shadow: 0 0 10px #fff;
   line-height: 1.3;
+  @media screen and (max-width: $xs) {
+    font-size: 16px;
+  }
+}
+
+.slider-dot-container {
+  position: absolute;
+  bottom: -16px;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+}
+
+.slider-dot {
+  display: inline-block;
+  vertical-align: middle;
+  margin: auto 7px;
+  @include crossBorder(50%);
+  border: 6px solid rgba(60, 60, 60, 0.15);
+  background: $lighter-gray;
+  background-clip: padding-box;
+  width: 12px;
+  height: 12px;
+  &:hover,
+  &:focus,
+  &:active {
+    background: $darkish-gray;
+    background-clip: padding-box;
+  }
+  &.active {
+    background: $primary;
+    background-clip: padding-box;
+    width: 20px;
+    height: 20px;
+  }
+}
+
+.site-footer {
+  text-align: center;
+}
+
+.footer-nav {
+  background: #373737;
+  border-top: 2px solid #2d2d2d;
+}
+
+.footer-head {
+  display: inline-block;
+  vertical-align: text-top;
+  text-align: center;
+  padding: 68px 16px;
+  & a {
+    display: block;
+  }
+  & .social-container {
+    margin-top: 15px;
+    & .social-link {
+      @include marginX(3.5px);
+    }
+  }
+}
+
+.footer-col {
+  display: inline-block;
+  vertical-align: text-top;
+  text-align: left;
+  padding: 68px 16px;
+  & h1 {
+    font-size: 12px;
+    font-weight: 600;
+    text-transform: uppercase;
+    color: #9b9b9b;
+    margin: 0;
+  }
+  & ul {
+    padding-left: 0;
+    @include marginY(12px);
+    & li {
+      list-style: none;
+      & ul {
+       padding-left: 12px;
+       @include marginY(0);
+      }
+    }
+  }
+}
+
+.footer-link {
+  @include paddingY(6px);
+  text-decoration: none;
+  font-size: 12px;
+  font-weight: 600;
+  line-height: 1;
+  &:hover,
+  &:focus,
+  &:active {
+    color: #fff;
+  }
+  li & {
+    color: #767575;
+  }
+  li li & {
+    color: #696969;
+  }
+}
+
+.copyright {
+  border-top: 2px solid #2d2d2d;
+  @include paddingY(30px);
+  background: #313131;
+  color: #373737;
+  font-size: 12px;
+  @include crossTransition(all .3s);
+  &:hover {
+    color: $light-gray;
+  }
 }
