--- a/res/scss/_fonts.scss
+++ b/res/scss/_fonts.scss
@@ -5,5 +5,5 @@ $open-sans: 'Open Sans', sans-serif;
 $raleway: 'Raleway', sans-serif;
 
 /* THEME FONTS */
-$heading: $raleway;
+$font_heading: $raleway;
 $body: $open-sans;
