--- a/res/scss/style.scss
+++ b/res/scss/style.scss
@@ -247,7 +247,7 @@ nav {
       & h3 {
         margin-bottom: 10px;
         text-transform: uppercase;
-        font-family: $heading;
+        font-family: $font_heading;
         font-size: 55.41px;
         font-weight: 500;
         text-shadow: 0 0 10px #fff;
@@ -296,10 +296,95 @@ nav {
 }
 
 .courseSection {
-  width: 1200px;
+  @include make-container();
+  max-width: 1230px;
+  margin: 78px auto;
 }
 
+.courseTile {
+  @include make-row();
+  margin: 8px auto;
+  background-repeat: no-repeat;
+  background-size: contain;
+  &:nth-child(odd) {
+    flex-flow: row;
+    & .courseTileText {
+      background-image: url('../../client_res/img/courses/bgOdd.png');
+      background-position: 100% 0;
+    }
+  }
+  &:nth-child(even) {
+    flex-flow: row-reverse;
+    & .courseTileText {
+      background-image: url('../../client_res/img/courses/bgEven.png');
+      background-position: 0 100%;
+    }
+  }
+}
 
+.courseTileImg {
+  @include make-col-ready();
+  @include make-col(1, 2);
+  padding: 0;
+}
+
+.courseTileText {
+  @include make-col-ready();
+  @include make-col(1, 2);
+  @include make-container();
+  padding: 80px;
+  color: #585858;
+}
+
+.courseHead {
+}
+
+.courseIcon {
+  @include make-col-ready();
+  @include make-col(80, 440);
+  padding: 0;
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.courseTileHeading {
+  @include make-col-ready();
+  @include make-col(360, 440);
+  padding: 0 0 0 42px;
+  margin-left: auto;
+  display: inline-block;
+  vertical-align: middle;
+  font-family: $font_heading;
+  text-transform: uppercase;
+  & h1 {
+    font-size: 36.24px;
+    & .highlight {
+      font-weight: 800;
+    }
+  }
+  & h2 {
+    font-size: 13.59px;
+    color: #9b9b9b;
+  }
+}
+
+.courseTileContent {
+  margin-top: 75px;
+  font-size: 14px;
+  & ul {
+    line-height: 1.7;
+    padding-left: 0;
+    & li {
+      background: url('../../client_res/img/courses/listIcon.png') 0 6px no-repeat;
+      list-style: none;
+      margin-top: 21px;
+      padding-left: 32px;
+    }
+  }
+}
+
+.courseTileFooter {
+}
 
 .site-footer {
   @include make-container();
@@ -337,19 +422,6 @@ nav {
 
 .footer-col {
   @include make-col-ready();
-  @media screen and (min-width: 1330px) {
-      @include make-col(1, 7);
-  }
-  @media screen and (max-width: 1329px) {
-      @include make-col(1, 6);
-  }
-  @media screen and (max-width: $md) {
-      @include make-col(1, 3);
-      margin-top: 20px;
-  }
-  @media screen and (max-width: $xs) {
-      @include make-col(1, 2);
-  }
   padding: 0 13px;
   vertical-align: text-top;
   text-align: left;
@@ -368,6 +440,34 @@ nav {
       & ul {
        padding-left: 12px;
        @include marginY(0);
+      }
+    }
+  }
+  @media screen and (min-width: 1330px) {
+    @include make-col(1, 7);
+  }
+  @media screen and (max-width: 1329px) {
+    @include make-col(1, 6);
+  }
+  @media screen and (max-width: $md) {
+    @include make-col(1, 3);
+    margin-top: 20px;
+  }
+  @media screen and (max-width: $xs) {
+    @include make-col(1, 2);
+  }
+  @media screen and (max-width: $xxs) {
+    @include make-col(1, 1);
+    text-align: center;
+    & ul {
+      padding-left: 0;
+      @include marginY(12px);
+      & li {
+        list-style: none;
+        & ul {
+         padding-left: 0;
+         @include marginY(0);
+        }
       }
     }
   }
