--- a/res/scss/style.scss
+++ b/res/scss/style.scss
@@ -12,7 +12,8 @@
 
 // sass
 body {
-  font-family: $body;
+  font-family: $font_body;
+  background: #f6f6f6;
 }
 
 a {
@@ -23,9 +24,17 @@ nav {
   z-index: 1;
 }
 
+.sectionSplit {
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  @include crossTransform(translateY(50%) translateX(-50%));
+}
+
 .site-header {
   position: relative;
   height: 780px;
+  margin-bottom: 5px;
 }
 
 .mobileItem {
@@ -206,13 +215,14 @@ nav {
   width: 100%;
 }
 
-.carolselControlIcon {
-  @include crossBorder(50%);
-  height: 40px;
-  width: 40px;
-  background: rgba(60, 60, 60, 0.5);
-  line-height: 40px;
-  font-size: 25px;
+.carouselControlIcon {
+  @include crossFilter(grayscale(100%));
+  @include crossTransition(all .3s);
+  &:hover,
+  &:focus,
+  &:active {
+    @include crossFilter(grayscale(0));
+  }
 }
 
 .carouselIndicators {
@@ -295,22 +305,34 @@ nav {
   }
 }
 
-.courseSection {
+.courseSection,
+.groupSection,
+.privateSection,
+.testemonialSection,
+.actionBtnSection {
   @include make-container();
+  position: relative;
   max-width: 1230px;
-  margin: 78px auto;
+  margin: auto;
+  @include paddingY(71px);
 }
 
 .courseTile {
   @include make-row();
   margin: 8px auto;
-  background-repeat: no-repeat;
-  background-size: contain;
+  @include crossBorder(5px);
+  overflow: hidden;
+  @include crossShadow(0 0 3px 2px #eee);
   &:nth-child(odd) {
     flex-flow: row;
     & .courseTileText {
       background-image: url('../../client_res/img/courses/bgOdd.png');
       background-position: 100% 0;
+      background-repeat: no-repeat;
+      background-size: cover;
+    }
+    @media screen and (max-width: $md) {
+      flex-flow: column;
     }
   }
   &:nth-child(even) {
@@ -318,25 +340,62 @@ nav {
     & .courseTileText {
       background-image: url('../../client_res/img/courses/bgEven.png');
       background-position: 0 100%;
+      background-repeat: no-repeat;
+      background-size: cover;
     }
+    @media screen and (max-width: $md) {
+      flex-flow: column;
+    }
+  }
+  @media screen and (max-width: $md) {
+    max-width: 600px;
   }
 }
 
 .courseTileImg {
   @include make-col-ready();
-  @include make-col(1, 2);
+  flex: 0 1 50%;
+  display: flex;
+  justify-content: center;
+  min-width: 0;
   padding: 0;
+  & img {
+    margin-left: 0;
+    @media screen and (max-width: 1100px) {
+      margin-left: -30%;
+    }
+    @media screen and (max-width: $md) {
+      margin-left: 0;
+    }
+  }
+  @media screen and (max-width: $md) {
+    @include make-col(1, 1);
+  }
 }
 
 .courseTileText {
   @include make-col-ready();
-  @include make-col(1, 2);
-  @include make-container();
-  padding: 80px;
+  flex: 1 0 50%;
+  min-width: 600px;
   color: #585858;
+  min-height: 503px;
+  @media screen and (max-width: $md) {
+    @include make-col(1, 1);
+  }
+  @media screen and (max-width: 647px) {
+    min-width: 0;
+    flex: 1;
+  }
 }
 
-.courseHead {
+.courseTileHead {
+  margin: 80px 65px;
+  @media screen and (max-width: $sm) {
+    margin: 50px 10vw;
+  }
+  @media screen and (max-width: $xs) {
+    margin: 50px 5vw;
+  }
 }
 
 .courseIcon {
@@ -366,14 +425,21 @@ nav {
     font-size: 13.59px;
     color: #9b9b9b;
   }
+  @media screen and (max-width: $xs) {
+    padding: 0 0 0 5vw;
+    & h1 {
+      font-size: 27px;
+    }
+  }
 }
 
 .courseTileContent {
-  margin-top: 75px;
+  margin: 80px 65px;
   font-size: 14px;
   & ul {
-    line-height: 1.7;
+    margin-bottom: 0;
     padding-left: 0;
+    line-height: 1.7;
     & li {
       background: url('../../client_res/img/courses/listIcon.png') 0 6px no-repeat;
       list-style: none;
@@ -381,9 +447,374 @@ nav {
       padding-left: 32px;
     }
   }
+  @media screen and (max-width: $sm) {
+    margin: 50px 10vw;
+  }
+  @media screen and (max-width: $xs) {
+    margin: 50px 5vw;
+  }
 }
 
-.courseTileFooter {
+.courseTileAction {
+  display: flex;
+  flex-direction: row;
+  align-self: flex-end;
+  margin: auto -15px;
+  max-width: 600px;
+  min-height: 100px;
+  @include crossShadow(0 -2px 3px 0 #eee);
+  @media screen and (max-width: $sm) {
+    flex-wrap: wrap;
+  }
+}
+
+.courseTilePrice,
+.courseTileSeeMore {
+  flex: 1 1 percentage(214/600);
+  @include make-container();
+  @media screen and (max-width: $sm) {
+    flex: 1 1 60%;
+    display: flex;
+    flex-direction: row;
+  }
+}
+
+.courseTilePrice {
+  background: #e60089;
+  color: #fbfbfb;
+}
+
+.courseInfo {
+  @include make-row();
+  flex-direction: column;
+  & * {
+    font-family: $font_body;
+    font-size: 14px;
+    line-height: 1;
+  }
+  & h1 {
+    margin: 19px auto 5px 25px;
+    font-weight: 700;
+  }
+  & h2 {
+    margin: 0 auto 0 25px;
+    font-weight: 400;
+  }
+  @media screen and (max-width: $sm) {
+    flex: 1 1 80%;
+    & h1 {
+      margin: 19px 19px 0;
+    }
+    & h2 {
+      margin: 0 19px 19px;
+    }
+  }
+}
+
+.coursePrice {
+  @include make-row();
+  flex-direction: column;
+  & * {
+    font-family: $font_body;
+    font-weight: 200;
+    line-height: 1;
+  }
+  & h1 {
+    margin: 0 25px 0 auto;
+    font-size: 20px;
+    & .highlight {
+      font-weight: 700;
+    }
+    @media screen and (max-width: 414px) {
+      font-size: 16px;
+    }
+  }
+  & h2 {
+    margin: 0 74px 3px auto;
+    font-size: 11px;
+  }
+  @media screen and (max-width: $sm) {
+    flex: 1 1 20%;
+    & h1 {
+      margin: auto 19px 19px;
+    }
+    & h2 {
+      margin: 19px 19px auto;
+    }
+  }
+}
+
+.courseTileSeeMore {
+  background: #f9f9f9;
+  color: #585858;
+  & .seeMoreText {
+    @include make-row();
+    flex-direction: column;
+    margin: 0 4px;
+    justify-content: center;
+    align-items: flex-start;
+    height: 100%;
+    & p {
+      margin: 0;
+      font-family: $font_body;
+      font-size: 14px;
+      font-weight: 500;
+    }
+  }
+}
+
+.enrollBtn,
+.seeMoreBtn {
+  flex: 0 0 percentage(86/600);
+  @include crossBorder(0);
+  white-space: normal;
+  text-transform: uppercase;
+  font-weight: 600;
+  font-size: 16px;
+  @media screen and (max-width: 414px) {
+    font-size: 13px;
+  }
+}
+
+.enrollBtn {
+  background: #da0684;
+  color: #fbfbfb;
+  &:hover,
+  &:focus,
+  &:active {
+    background: #b7066f;
+  }
+}
+
+.seeMoreBtn {
+  background: #ecebeb;
+  color: #666;
+  &:hover,
+  &:focus,
+  &:active {
+    background: #ccc;
+  }
+}
+
+.groupRow {
+  @include make-row();
+  justify-content: center;
+  margin: auto;
+  @include crossBorder(5px);
+  overflow: hidden;
+  @media screen and (max-width: $md) {
+    max-width: 400px;
+  }
+}
+
+.groupCol {
+  @include make-col-ready();
+  @include make-col(1, 3);
+  overflow: hidden;
+  display: flex;
+  padding: 0;
+  &:nth-child(odd) {
+    flex-direction: column;
+  }
+  &:nth-child(even) {
+    flex-direction: column-reverse;
+  }
+  @media screen and (max-width: $md) {
+    @include make-col(1, 1);
+    &:nth-child(even) {
+      flex-direction: column;
+    }
+  }
+}
+
+.groupImg {
+  align-self: center;
+}
+
+.groupSplit {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  @include crossTransform(translateX(-50%) translateY(-50%));
+  border: 4px solid #fff;
+  @include crossBorder(50%);
+  width: 79px;
+  height: 79px;
+  line-height: 71px;
+  text-align: center;
+  background: #ec008c;
+  color: #fefefe;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-family: $raleway;
+  font-weight: 600;
+  font-size: 14.56px;
+  @include crossTransition(all .3s);
+  &:hover,
+  &:focus,
+  &:active {
+    border-color: #ec008c;
+    background: #fff;
+    color: #ec008c;
+    font-weight: 800;
+  }
+}
+
+.groupText {
+  background-image: url('../../client_res/img/groups/bgGroup.png');
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  background-position: center;
+  width: 100%;
+  height: 100%;
+  min-height: 400px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  & h1 {
+    margin: 24px auto;
+    text-transform: uppercase;
+    font-family: $raleway;
+    font-size: 22px;
+    color: #585858;
+    & .highlight {
+      font-weight: 800;
+    }
+  }
+  & p {
+    margin: 0 46px 12px;
+    font-size: 12px;
+    font-weight: 600;
+    color: #515151;
+  }
+  & .seeMoreBtn {
+    flex: 0;
+    margin: 0 auto;
+    @include crossBorder(5px);
+    padding: 8px;
+    background: transparent;
+    font-size: 14px;
+    font-weight: 600;
+    color: #ec008c;
+    &:hover,
+    &:focus,
+    &:active {
+      text-decoration: none;
+      background: #ec008c;
+      color: #fff;
+    }
+  }
+}
+
+.bigBg {
+  position: absolute;
+  top: 50px;
+  left: 50%;
+  height: 1146px;
+  width: 1906px;
+  @include crossTransform(translateX(-50%));
+  background-image: url('../../client_res/img/bg/big2.png');
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  background-position: center;
+}
+
+.privateSection {
+  @include paddingY(51px);
+}
+
+.privateRow {
+  @include make-row();
+  justify-content: center;
+  margin: auto -15px;
+  max-width: 1230px;
+}
+
+.privateCol {
+  @include make-col-ready();
+  @include make-col(1, 3);
+  overflow: hidden;
+  @include marginY(20px);
+  & h1 {
+    margin-top: 26px;
+    text-align: right;
+    text-transform: uppercase;
+    font-family: $raleway;
+    font-size: 25px;
+    color: #585858;
+    & .highlight {
+      font-weight: 800;
+    }
+  }
+  @media screen and (max-width: $md) {
+    @include make-col(1, 2);
+    max-width: 410px;
+  }
+  @media screen and (max-width: $sm) {
+    @include make-col(1, 1);
+    max-width: 410px;
+  }
+}
+
+.privateImg {
+  max-width: 100%;
+  /* temp solution */
+    height: 380px;
+    object-fit: cover;
+  /* uncomment this block and remove block above when photos are square
+    height: auto;
+    */
+  @include crossBorder(50% 50% 10px 50%);
+}
+
+.testemonialSection {
+  padding-top: 55px;
+  & h1 {
+    margin-bottom: 68px;
+    font-family: $font_heading;
+    font-size: 35px;
+    text-transform: uppercase;
+    text-align: center;
+    color: #ec008c;
+    & .highlight {
+      font-weight: 800;
+    }
+  }
+}
+
+.testemonialRow {
+  @include make-row();
+  justify-content: flex-end;
+}
+
+.testemonialCol {
+  @include make-col-ready();
+  @include make-col(600, 1120);
+}
+
+.testemonialCarouselItem {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  text-align: center;
+}
+
+.testemonialCarouselControl {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 15%;
+  color: #fff;
+}
+
+.userImg {
+}
+
+.testemonialCarouselCaption {
 }
 
 .site-footer {
