update font-awesome to 5.0.0
update font-awesome to 5.0.0-beta

--- a/res/css/style.css
+++ b/res/css/style.css
@@ -6397,8 +6397,8 @@ nav {
   width: 100%; }
 
 .carouselControlIcon {
-  font-size: 26px;
-  color: #ccc; }
+  font-size: 40px;
+  color: #333; }
   .carouselControlIcon:hover, .carouselControlIcon:focus, .carouselControlIcon:active {
     color: #ec008c; }
 
