--- a/res/scss/style.scss
+++ b/res/scss/style.scss
@@ -216,8 +216,8 @@ nav {
 }
 
 .carouselControlIcon {
-  font-size: 26px;
-  color: #ccc;
+  font-size: 40px;
+  color: #333;
   &:hover,
   &:focus,
   &:active {
