--- a/res/scss/_mixins.scss
+++ b/res/scss/_mixins.scss
@@ -38,6 +38,14 @@
   box-shadow: $shadow;
 }
 
+@mixin crossGradient($gradient) {
+  background: -webkit-$gradient;
+  background: -moz-$gradient;
+  background: -ms-$gradient;
+  background: -o-$gradient;
+  background: $gradient;
+}
+
 @mixin marginX($right, $left: $right) {
   margin-left: $left;
   margin-right: $right;
