--- a/res/scss/style.scss
+++ b/res/scss/style.scss
@@ -96,20 +96,20 @@ nav {
   font-size: 12px;
   font-weight: 600;
   color: $nav-btn;
+  & svg {
+    margin-left: 4px;
+    @include crossTransition(transform .3s);
+    &.up {
+      @include crossTransform(rotate(180deg));
+    }
+  }
   &:hover,
   &:focus,
   &:active {
     color: $primary;
   }
   &::after {
-    border: none;
-    vertical-align: middle;
-    width: 14px;
-    height: 14px;
-    background-image: url('../../client_res/img/icon/dropDown.png');
-    background-repeat: no-repeat;
-    background-size: cover;
-    @include crossFilter(grayscale(100%)); // TODO not working
+    display: none;
   }
   @media screen and (max-width: $md) {
     padding: 15px 25px;
@@ -123,11 +123,6 @@ nav {
 }
 
 .navBar .navItem .dropdownMenu {
-  @media screen and (max-width: $md) {
-    margin: 0;
-    border: none;
-    padding: 0;
-  }
   & .navLink {
     @media screen and (max-width: $md) {
       background: $dark-gray;
@@ -139,6 +134,11 @@ nav {
         color: $primary;
       }
     }
+  }
+  @media screen and (max-width: $md) {
+    margin: 0;
+    border: none;
+    padding: 0;
   }
 }
 
@@ -718,6 +718,12 @@ nav {
   background-repeat: no-repeat;
   background-size: 100% 100%;
   background-position: center;
+  @media screen and (max-width: $md) {
+    background-image: url('../../client_res/img/bg/big.png');
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    background-position: center;
+  }
 }
 
 .privateSection {
@@ -770,8 +776,9 @@ nav {
 
 .testemonialSection {
   padding-top: 55px;
+  max-width: 1280px;
   & h1 {
-    margin-bottom: 68px;
+    margin-bottom: 18px;
     font-family: $font_heading;
     font-size: 35px;
     text-transform: uppercase;
@@ -790,12 +797,40 @@ nav {
 
 .testemonialCol {
   @include make-col-ready();
-  @include make-col(600, 1120);
+  @include make-col(570, 1120);
+  @media screen and (max-width: $md) {
+    @include make-col(1, 1);
+  }
+}
+
+.carouselTestemonial {
+  padding-top: 50px;
 }
 
 .testemonialCarouselItem {
-  padding: 0 10%; // TODO get this right
+  padding: 0 15%;
   text-align: center;
+  font-style: italic;
+  font-weight: 600;
+  font-size: 22px;
+}
+
+.testemonialCarouselCaption {
+  & p {
+    margin: 22px 0 14px;
+    color: #585858;
+    @media screen and (max-width: $xs) {
+      font-size: 18px;
+    }
+  }
+  & h1 {
+    font-family: $font_body;
+    font-style: italic;
+    font-weight: 700;
+    font-size: 20px;
+    text-transform: capitalize;
+    color: #777;
+  }
 }
 
 .testemonialCarouselControl {
@@ -805,14 +840,87 @@ nav {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 15%;
+  width: 10%;
   color: #fff;
 }
 
-.userImg {
+.actionBtnSection {
+  padding-top: 0;
 }
 
-.testemonialCarouselCaption {
+.actionBtnRow {
+  @include make-row();
+}
+
+.actionBtnCol {
+  @include make-col-ready();
+  @include make-col(1, 3);
+  margin: 30px auto;
+  @media screen and (max-width: $xs) {
+    @include make-col(1, 1);
+  }
+}
+
+.actionBtn {
+  position: relative;
+  margin: auto;
+  @include crossBorder(50%);
+  max-width: 290px;
+  width: 100%;
+  max-height: 290px;
+  height: 100%;
+  text-align: center;
+  text-transform: uppercase;
+  color: #9c9c9c;
+  @include crossGradient(linear-gradient(#cbcbcb, #e8e8e8));
+  @include crossShadow(0 0 2px 2px rgba(0,0,0,0.2));
+  &:before {
+    content: "";
+    display: block;
+    padding-bottom: 50%;
+  }
+  &:after {
+    content: "";
+    display: block;
+    padding-bottom: 50%;
+  }
+  &:hover {
+    background-image: url('../../client_res/img/bigButtons/bg.png');
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
+    background-size: 105% 105%;
+    color: #fff;
+  }
+  & h1 {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    @include crossTransform(translateX(-50%) translateY(-80%));
+    font-size: 41px;
+    font-weight: 700;
+    @media screen and (max-width: $sm) {
+      font-size: 32px;
+    }
+    @media screen and (max-width: $xs) {
+      font-size: 41px;
+    }
+  }
+  & h2 {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    @include crossTransform(translateX(-50%) translateY(80%));
+    width: 100%;
+    font-size: 15px;
+    font-weight: 700;
+    font-style: italic;
+    @media screen and (max-width: $sm) {
+      font-size: 13px;
+    }
+    @media screen and (max-width: $xs) {
+      font-size: 15px;
+    }
+  }
 }
 
 .site-footer {
